mobile spacing issues part 2

--- a/src/editprojects.css
+++ b/src/editprojects.css
@@ -161,9 +161,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    justify-items: center;
   }
 
   .project-card {
     width: 150%; 
+    text-align: left;
   }
 }
